# DropLab

./: .gitignore  CITATION.cff  README.md  droplab_Part1_Foundations.ipynb  droplab_Part2_Experiments.ipynb  droplab_edu.ipynb  environment.yml  input.yaml  pyproject.toml  requirements.txt  run.py  run_flow2d.py
.streamlit/: config.toml
Post_process/: analysis.py  print_plot.py
app/: Home.py  __init__.py  launch.py
docs/: CLIMATE_INTERVENTION.md  CLIMATE_INTERVENTION_INSTRUCTOR.md  COLLISION_COMPARISON.md  EDU_FRAMEWORK.md  ELECTRIFICATION_AUDIT.md  ICE_LESSONS.md  ICE_RADIATION_ROADMAP.md  TECHNICAL_NOTE_dynamics_electrification_sgs.md
droplab/: __init__.py  _igr_table.py  aci.py  aero_init.py  climate_diag.py  climate_widget.py  collision.py  collision_soa.py  condensation.py  condensation_fast.py  edu.py  electrification.py  ensemble.py  entrainment.py  flow2d.py  flow2d_driver.py  flow2d_dynamic.py  flow2d_ensemble.py  flow2d_viz.py  ice_habit.py  ice_microphysics.py  lem.py  lem_driver.py  micro_particle.py  mixing.py  mpdata.py  output.py  parameters.py  parcel.py  poisson.py  runner.py  sgs_smagorinsky.py  sounding_diag.py  soundings.py  timestep_routine.py  timestep_soa.py  uncertainty.py  widget.py
examples/: aci_diagnostics.py  cloud_cases.py  entrainment_mixing.py  lem_broadening.py  lightning_demo.py  lightning_lecture.py  lightning_still.py  mcb_demo.py  precip_seeding.py  precip_vs_nonprecip.py  uncertainty_demo.py
notebooks/: Climate_Intervention.ipynb
scripts/: make_readme_assets.py  make_release_snapshot.sh  warm_demo_cache.py
(+101 files in other folders)
