[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "droplab"
version = "2.0.0"
description = "Educational Lagrangian Cloud Model parcel simulator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "J. Lim" }]
dependencies = [
  "numpy>=1.24,<2.5", "scipy>=1.10", "pandas>=2.0", "matplotlib>=3.7",
  "plotly>=5.0", "numba>=0.65", "ipywidgets>=8.0", "tqdm>=4.65", "joblib>=1.3",
  # front-ends for the educational notebooks / Streamlit climate app
  "streamlit>=1.30", "jupyter",
]

[project.optional-dependencies]
# the Streamlit sandbox front-end (Parcel / 2-D / Climate / Lecture)
app = ["streamlit>=1.30", "plotly>=5.18", "Pillow>=10.0"]

[project.scripts]
# launch the sandbox: `droplab-app` (forwards args to `streamlit run`)
droplab-app = "app.launch:main"

[tool.setuptools]
packages = ["droplab", "Post_process", "app", "app.ui"]

[tool.setuptools.package-data]
# ship the entry script + the page modules (pages/ is a plain dir, not a package)
app = ["Home.py", "pages/*.py"]

[tool.pytest.ini_options]
markers = [
  "slow: full-resolution physics gates (run with `pytest -m slow`); excluded from the fast matrix",
]
